loopdowhile.Poucet1.scala.error
Compilation error:
Poucet1:1: error: Missing closing brace `}' assumed here
var nbBaggle = 0
^Poucet1:16: error: ';' expected but 'while' found.
  } while (sortieTrouvee == false)
    ^Poucet1:20: error: 'while' expected but '}' found.
}
^